--- a/AntPlusMauiClient/AntPlusMauiClient.csproj
+++ b/AntPlusMauiClient/AntPlusMauiClient.csproj
@@ -68,7 +68,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <ProjectReference Include="..\TailscaleGrpc.Shared\TailscaleGrpc.Shared.csproj" />
+	  <ProjectReference Include="..\TailscaleGrpc.Shared\AntGrpc.Shared.csproj" />
 	</ItemGroup>
 
 	<ItemGroup>
