--- a/AntPlusServer/AntPlusServer.csproj
+++ b/AntPlusServer/AntPlusServer.csproj
@@ -13,7 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\TailscaleGrpc.Shared\TailscaleGrpc.Shared.csproj" />
+    <ProjectReference Include="..\TailscaleGrpc.Shared\AntGrpc.Shared.csproj" />
   </ItemGroup>
 
 </Project>
