Adding more devices to the app.

--- a/AntPlusMauiClient/AntPlusMauiClient.csproj
+++ b/AntPlusMauiClient/AntPlusMauiClient.csproj
@@ -97,6 +97,9 @@
 	  <MauiXaml Update="Views\BikeSpeedView.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
+	  <MauiXaml Update="Views\CommonDataPagesView.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	  <MauiXaml Update="Views\CTFView.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
