Implemented bicycle power view/view models.

--- a/AntPlusMauiClient/AntPlusMauiClient.csproj
+++ b/AntPlusMauiClient/AntPlusMauiClient.csproj
@@ -94,7 +94,13 @@
 	  <MauiXaml Update="Views\AssetTrackerView.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
+	  <MauiXaml Update="Views\BicycleCrankTorqueView.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	  <MauiXaml Update="Views\BicyclePowerView.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	  <MauiXaml Update="Views\BicycleWheelTorqueView.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
 	  <MauiXaml Update="Views\BikeSpeedView.xaml">
